--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -47,7 +47,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '👋 Thanks for reporting! Preview available at: https://www.codeinlevels.com/previews/${{ steps.deploy.outputs.RANDOM_PATH }}/'
+              body: '👋 Thanks for reporting! Preview available at: https://www.codeinlevels.com/previews/aaa/'
             })
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
