--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -34,6 +34,7 @@ jobs:
         run: |
           BUCKET_NAME=www.codeinlevels.com
           RANDOM_PATH=$(uuidgen) # Rastgele bir UUID oluşturur
+          echo "RANDOM_PATH=$RANDOM_PATH" >> $GITHUB_ENV
           aws s3 sync ./build s3://$BUCKET_NAME/previews/$RANDOM_PATH --delete
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -43,9 +44,12 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
+            const randomPath = process.env.RANDOM_PATH;
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '👋 Thanks! Preview available at: http://www.codeinlevels.com/previews/${{ steps.deploy.outputs.RANDOM_PATH }}/'
+              body: '👋 Thanks! Preview available at: http://www.codeinlevels.com/previews/${randomPath}/'
             })
+        env:
+          RANDOM_PATH: ${{ env.RANDOM_PATH }}
