--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -47,5 +47,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '👋 Thanks! Preview available at: http://www.codeinlevels.com/previews/${{ steps.deploy.outputs.RANDOM_PATH }}/'
+              body: `👋 Thanks! Preview available at: http://www.codeinlevels.com/previews/${{ steps.deploy.outputs.RANDOM_PATH }}/`
             })
