--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -49,7 +49,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '👋 Thanks! Preview available at: http://www.codeinlevels.com/previews/${randomPath}/'
+              body: `👋 Thanks! Preview available at: http://www.codeinlevels.com/previews/${randomPath}/`
             })
         env:
           RANDOM_PATH: ${{ env.RANDOM_PATH }}
