--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Deploy to S3
         run: |
-          BUCKET_NAME=www.codeinlevels.com
+          BUCKET_NAME=previews.codeinlevels.com
           RANDOM_PATH=$(uuidgen) # Rastgele bir UUID oluşturur
           echo "RANDOM_PATH=$RANDOM_PATH" >> $GITHUB_ENV
           aws s3 sync ./build s3://$BUCKET_NAME/previews/$RANDOM_PATH --delete
@@ -49,7 +49,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `👋 Thanks! Preview available at: http://www.codeinlevels.com/previews/${randomPath}/`
+              body: `👋 Thanks! Preview available at: http://previews.codeinlevels.com/${randomPath}/`
             })
         env:
           RANDOM_PATH: ${{ env.RANDOM_PATH }}
