--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -35,7 +35,7 @@ jobs:
           BUCKET_NAME=previews.codeinlevels.com
           RANDOM_PATH=$(uuidgen) # Rastgele bir UUID oluşturur
           echo "RANDOM_PATH=$RANDOM_PATH" >> $GITHUB_ENV
-          aws s3 sync ./build s3://$BUCKET_NAME/previews/$RANDOM_PATH --delete
+          aws s3 sync ./build s3://$BUCKET_NAME/ --delete
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -49,7 +49,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `👋 Thanks! Preview available at: http://previews.codeinlevels.com/${randomPath}/`
+              body: `👋 Thanks! Preview available at: http://previews.codeinlevels.com/`
             })
         env:
           RANDOM_PATH: ${{ env.RANDOM_PATH }}
